# rac-pymol

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/: index.html
.github/doc/: app.js  confirm-overlay.html  header.html  right-pane.html  styles.css
.github/scripts/: curl_wrapper.sh  download_zip.py  inject_pat.py  local.sh  remote.sh
.github/w/: ghpage
.github/workflows/: ci  deploy-ui.yml  ghpage.yml  ui.yml
db/: scenography.db
doc/: app.js  left-pane.html  right-pane.html
doc/doc/: app.js  confirm-overlay.html
engine/: .pymol_integration.py  __init__.py  api.py  condenser.py  controller.py  models.py  pymol_integration.py
pymol/: __init__.py  controller.py  pymol_hooks.py  recipe.py  scene_control.py
pymol-backend/: README.md  __init__.py  adapter.py  backend.py  controller.py  driver.py  integration.py  middleware.py  pymol_ops.py  scene.py  utils.py
pymol-workshop/: README.md  batch.py  cargo.py  cubic.py  enzyme.py  nano.py  simple.pml  simple.py  yarro.pml
release/: README.md  __init__.py  prepare.py  push.py  shared.py
tests/: test_db_versioning.py  test_engine.py  test_ingest.py  test_model.py  test_release.py  test_render_pipeline.py
tests/data/: 1lp3.cif  1pdb.cif  1pdb.pse  9ax6.cif  9cc4.cif  visual_system_state.json
