[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rac-pymol"
version = "0.1.0"
description = "Rendering-as-code with PyMOL: backend abstraction template included"
authors = [{ name = "Assistant", email = "noreply@example.com" }]

dependencies = ["pymol-open-source"]

requires-python = ">=3.9"

[tool.ruff]
line-length = 120
exclude = ["build", "dist", "__pycache__", ".venv", "pymol-templates", ".rendering"]

[tool.ruff.lint]
# keep status checks strict, but adapt realistic project tolerance for this repo
extend-ignore = ["E402", "E501", "E701", "C901"]
select = ["E", "F", "W", "C90"]  # mimic pycodestyle/flake8 defaults

[tool.setuptools]
packages = ["engine", "pymol_backend", "release"]

[tool.setuptools.package-dir]
pymol_backend = "pymol-backend"

[project.optional-dependencies]
dev = ["ruff>=0.15.0", "pytest>=7.0"]

[tool.pytest.ini_options]
markers = [
    "deploy: end-to-end render pipeline smoke test (requires PyMOL + display)",
]
